# hook

./: Cargo.toml  README.md
example_programs/: test_strcmp.c  test_strlen.c
examples/: simple.rs  strcmp.rs
src/: lib.rs
tests/: a.rs
