[package]
name = "hook"
version = "0.1.0"
authors = ["yann"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "*", features = ["full", "printing", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
libc = "0.2"

[lib]
proc-macro = true

[[example]]
name = "simple"
crate-type = ["cdylib"]

[[example]]
name = "strcmp"
crate-type = ["cdylib"]
